-------------
Version 0.5.1
-------------

COCKPIT

- Encryption algorithm can be changed in the preferences dialog.
- Progress dialogs modified to fix display problems with JDK version 1.6.


SYNCHRONIZE

- Added --nodelete option that keeps items on the destination that have been
  removed from the source. This is similar to --keepfiles except that files
  may still be reverted with the --nodelete option.
- Added --noprogress option that prevents progress messages from being 
  printed to the console, for cases where these messages pollute log files.
  This option is similar to --quiet, except the action report is printed.
- Added property setting to ignore missing source directories when uploading.
- Progress status messages shortened to fit into 80 character width consoles.


UPLOADER

- Improved skinning capabilities.


TOOLKIT

  * General

- Fixed bugs that caused uploads greater than 2GB to fail.
- File listings as built using the FileComparer.buildFileMap() methods can be
  set not to include place-holder objects to represent empty directories 
  (mimetype "application/x-directory") with the new configuration setting
  uploads.storeEmptyDirectories.
- Added the Bouncy Castle security provider to the suite, increasing the number
  of cipher algorithms available for encrypting files.
- The method S3Service.listObjectsChunked now includes Common Prefixes in the
  result object returned.

  * REST S3 Service

- Rudimentary bandwidth throttling using the jets3t.properties setting
  httpclient.read-throttle, which is specified in KB/s.
- Proxy settings are now configurable via the jets3t.properties settings:
  httpclient.proxy-autodetect, httpclient.proxy-host, httpclient.proxy-port

  * Multi-threaded Service
  
- Administration actions can have more threads assigned than upload/download 
  actions with the new configuration setting s3service.admin-max-thread-count.
  These connections run much faster with more threads and as they are light 